openturns/1.22/_sources/auto_meta_modeling/polynomial_chaos_metamodel/plot_functional_chaos_exploitation.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "auto_meta_modeling/polynomial_chaos_metamodel/plot_functional_chaos_exploitation.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_auto_meta_modeling_polynomial_chaos_metamodel_plot_functional_chaos_exploitation.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_auto_meta_modeling_polynomial_chaos_metamodel_plot_functional_chaos_exploitation.py:


Polynomial chaos exploitation
=============================

The goal of this example is to create a polynomial chaos expansion using the
:class:`~openturns.FunctionalChaosAlgorithm` class and see the different methods
of the :class:`~openturns.FunctionalChaosResult` class.
In order to understand the different results, let us review some notations associated to the
polynomial chaos expansion.

We first introduce the physical input, output and model:

- the random vector :math:`\vect{X}` is the physical input random vector,
- the output random vector :math:`\vect{Y}` is the output of the physical model,
- the physical model :math:`g` is a function of the physical input:

.. math:: \vect{Y} = g(\vect{X}).

Then we introduce the iso-probabilistic transformation:

- the random vector :math:`\vect{Z}` is the standardized input random vector,
- the transformation :math:`T` is the iso-probabilistic transformation mapping
  from the physical input to the standardized input:

.. math:: \vect{Z} = T(\vect{X}),

- the standard distribution :math:`\mu` of the standardized random vector :math:`\vect{Z}`.

We expand the model on the multivariate basis:

- the full (i.e. unselected) multivariate basis is :math:`\left(\Psi_k\right)_{k \in \mathbb{N}}`,
- the composition of each polynomial of the truncated multivariate basis :math:`\Psi_k`,
- the full set of coefficients of the polynomial expansion is the set :math:`(\vect{a}_k)_{k \in \mathbb{N}}`,
- the composed model :math:`h` is a function of the standardized random vector :math:`\vect{Z}`:

.. math:: \vect{Y} = h(\vect{Z}) = g \circ T^{-1}(\vect{Z})

Then we use a model selection method (e.g. from the :class:`~openturns.LARS` class):

- the set :math:`\mathcal{K} \subseteq \mathbb{N}` is the set of indices corresponding to the
  result of the selection method,
- the truncated (i.e. selected) multivariate basis is :math:`\left(\Psi_k\right)_{k \in \mathcal{K}}`,
- the selected set of coefficients of the polynomial expansion is the set :math:`(\vect{a}_k)_{k \in \mathcal{K}}`,
- the composed meta model :math:`\hat{h}` is the function
  of the standardized variables based on the truncated
  multivariate basis :math:`\left(\Psi_k\right)_{k \in \mathcal{K}}`.
- the meta model is a function of the physical input:

.. math:: \vect{Y} = \hat{g} (\vect{X}) = \hat{h} \circ T(\vect{X}).


Based on the previous definitions, the composed model is:

.. math::

    h(\vect{Z}) =  \sum_{k \in \mathbb{N}} \vect{a}_k \Psi_k(\vect{Z}),

the composed metamodel is:

.. math::

    \hat{h}(\vect{Z}) = \sum_{k \in \mathcal{K}} \vect{a}_k \Psi_k(\vect{Z}),

and the metamodel is:

.. math::

    \hat{g}(\vect{X}) = \sum_{k \in \mathcal{K}} \vect{a}_k \Psi_k \circ T(\vect{X}).

The three previous mathematical functions are implemented as instances of the
:class:`~openturns.Function` class.

.. GENERATED FROM PYTHON SOURCE LINES 75-77

Create the polynomial chaos expansion
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. GENERATED FROM PYTHON SOURCE LINES 79-83

.. code-block:: Python

    import openturns as ot

    ot.Log.Show(ot.Log.NONE)








.. GENERATED FROM PYTHON SOURCE LINES 84-89

Prepare some input and output samples.
We define a model which has two inputs and two outputs.
Then we define a normal input random vector with independent marginals,
and we generate a sample from the input random vector.
Finally, we evaluate the output sample from the model.

.. GENERATED FROM PYTHON SOURCE LINES 89-98

.. code-block:: Python

    ot.RandomGenerator.SetSeed(0)
    dimension = 2
    input_names = ["x1", "x2"]
    formulas = ["cos(x1 + x2)", "(x2 + 1) * exp(x1 - 2 * x2)"]
    model = ot.SymbolicFunction(input_names, formulas)
    distribution = ot.Normal(dimension)
    x = distribution.getSample(30)
    y = model(x)








.. GENERATED FROM PYTHON SOURCE LINES 99-100

Create a functional chaos algorithm.

.. GENERATED FROM PYTHON SOURCE LINES 100-102

.. code-block:: Python

    algo = ot.FunctionalChaosAlgorithm(x, y)








.. GENERATED FROM PYTHON SOURCE LINES 103-109

The previous constructor is the simplest since it has only two inputs arguments.
In this case, the algorithm has to retrieve the distribution from the `x`
sample, which can be difficult, especially if the sample size is small.
Notice, however, that the input distribution is known in our simple case.
This is why we update the previous script and give the input distribution as a third
input argument of the constructor.

.. GENERATED FROM PYTHON SOURCE LINES 109-112

.. code-block:: Python

    algo = ot.FunctionalChaosAlgorithm(x, y, distribution)
    algo.run()








.. GENERATED FROM PYTHON SOURCE LINES 113-114

Get the result.

.. GENERATED FROM PYTHON SOURCE LINES 114-117

.. code-block:: Python

    result = algo.getResult()
    result






.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    FunctionalChaosResult
    <ul>
      <li>input dimension: 2</li>
      <li>output dimension: 2</li>
      <li>distribution dimension: 2</li>
      <li>transformation: 2 -> 2</li>
      <li>inverse transformation: 2 -> 2</li>
      <li>orthogonal basis dimension: 2</li>
      <li>indices size: 33</li>
      <li>relative errors: [1.67645e-29,3.00023e-28]</li>
      <li>residuals: [4.19008e-16,9.53483e-15]</li>
    </ul>
    <table>
      <tr>
        <th>Index</th>
        <th>Multi-index</th>
        <th>Coeff.#0</th>
        <th>Coeff.#1</th>
      </tr>
      <tr>
        <th>0</th>
        <td>[0,0]</td>
        <td>0.003044029</td>
        <td>1.453744</td>
      </tr>
      <tr>
        <th>1</th>
        <td>[1,0]</td>
        <td>-0.7662159</td>
        <td>-8.213236</td>
      </tr>
      <tr>
        <th>2</th>
        <td>[0,1]</td>
        <td>-0.2309922</td>
        <td>-5.143131</td>
      </tr>
      <tr>
        <th>3</th>
        <td>[2,0]</td>
        <td>-1.382805</td>
        <td>12.49095</td>
      </tr>
      <tr>
        <th>4</th>
        <td>[0,2]</td>
        <td>-1.064142</td>
        <td>-3.434068</td>
      </tr>
      <tr>
        <th>5</th>
        <td>[3,0]</td>
        <td>-2.159387</td>
        <td>-25.72925</td>
      </tr>
      <tr>
        <th>6</th>
        <td>[0,3]</td>
        <td>-1.016437</td>
        <td>-37.68955</td>
      </tr>
      <tr>
        <th>7</th>
        <td>[1,1]</td>
        <td>-0.3250412</td>
        <td>8.681302</td>
      </tr>
      <tr>
        <th>8</th>
        <td>[4,0]</td>
        <td>-0.9074029</td>
        <td>22.5756</td>
      </tr>
      <tr>
        <th>9</th>
        <td>[0,4]</td>
        <td>-1.625116</td>
        <td>-9.308155</td>
      </tr>
      <tr>
        <th>10</th>
        <td>[5,0]</td>
        <td>-2.167086</td>
        <td>-49.31879</td>
      </tr>
      <tr>
        <th>11</th>
        <td>[0,5]</td>
        <td>-2.250736</td>
        <td>-66.24227</td>
      </tr>
      <tr>
        <th>12</th>
        <td>[2,1]</td>
        <td>-0.173514</td>
        <td>3.055715</td>
      </tr>
      <tr>
        <th>13</th>
        <td>[1,2]</td>
        <td>0.1128078</td>
        <td>-13.65439</td>
      </tr>
      <tr>
        <th>14</th>
        <td>[6,0]</td>
        <td>1.276335</td>
        <td>14.73564</td>
      </tr>
      <tr>
        <th>15</th>
        <td>[0,6]</td>
        <td>-1.21493</td>
        <td>-38.304</td>
      </tr>
      <tr>
        <th>16</th>
        <td>[7,0]</td>
        <td>-0.717338</td>
        <td>-40.98679</td>
      </tr>
      <tr>
        <th>17</th>
        <td>[0,7]</td>
        <td>-2.132556</td>
        <td>-43.57289</td>
      </tr>
      <tr>
        <th>18</th>
        <td>[3,1]</td>
        <td>-0.136081</td>
        <td>1.656592</td>
      </tr>
      <tr>
        <th>19</th>
        <td>[1,3]</td>
        <td>0.4362043</td>
        <td>13.44593</td>
      </tr>
      <tr>
        <th>20</th>
        <td>[2,2]</td>
        <td>0.4283277</td>
        <td>-0.5028248</td>
      </tr>
      <tr>
        <th>21</th>
        <td>[8,0]</td>
        <td>2.264666</td>
        <td>-1.318424</td>
      </tr>
      <tr>
        <th>22</th>
        <td>[0,8]</td>
        <td>-0.03839479</td>
        <td>-49.45262</td>
      </tr>
      <tr>
        <th>23</th>
        <td>[4,1]</td>
        <td>-0.1157121</td>
        <td>2.091355</td>
      </tr>
      <tr>
        <th>24</th>
        <td>[1,4]</td>
        <td>-0.02997813</td>
        <td>-7.302498</td>
      </tr>
      <tr>
        <th>25</th>
        <td>[9,0]</td>
        <td>-0.005127433</td>
        <td>-12.17123</td>
      </tr>
      <tr>
        <th>26</th>
        <td>[0,9]</td>
        <td>-0.7380268</td>
        <td>-9.394012</td>
      </tr>
      <tr>
        <th>27</th>
        <td>[3,2]</td>
        <td>0.1536367</td>
        <td>-1.629815</td>
      </tr>
      <tr>
        <th>28</th>
        <td>[2,3]</td>
        <td>0.02009974</td>
        <td>-0.1488457</td>
      </tr>
      <tr>
        <th>29</th>
        <td>[10,0]</td>
        <td>0.8816912</td>
        <td>-3.421535</td>
      </tr>
      <tr>
        <th>30</th>
        <td>[0,10]</td>
        <td>0.181939</td>
        <td>-19.66619</td>
      </tr>
      <tr>
        <th>31</th>
        <td>[5,1]</td>
        <td>-0.2689637</td>
        <td>1.728556</td>
      </tr>
      <tr>
        <th>32</th>
        <td>[1,5]</td>
        <td>0.04365453</td>
        <td>4.732682</td>
      </tr>
    </table>

    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 118-120

Get the coefficients
~~~~~~~~~~~~~~~~~~~~

.. GENERATED FROM PYTHON SOURCE LINES 122-124

In the next cells, we observe several methods of the `result` object.
First, we get the polynomial chaos coefficients.

.. GENERATED FROM PYTHON SOURCE LINES 124-126

.. code-block:: Python

    result.getCoefficients()






.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    <table>
      <tr><td></td><th>v0</th><th>v1</th></tr>
      <tr><th>0</th><td>0.003044029</td><td>1.453744</td></tr>
      <tr><th>1</th><td>-0.7662159</td><td>-8.213236</td></tr>
      <tr><th>2</th><td>-0.2309922</td><td>-5.143131</td></tr>
      <tr><th>3</th><td>-1.382805</td><td>12.49095</td></tr>
      <tr><th>4</th><td>-1.064142</td><td>-3.434068</td></tr>
      <tr><th>5</th><td>-2.159387</td><td>-25.72925</td></tr>
      <tr><th>6</th><td>-1.016437</td><td>-37.68955</td></tr>
      <tr><th>7</th><td>-0.3250412</td><td>8.681302</td></tr>
      <tr><th>8</th><td>-0.9074029</td><td>22.5756</td></tr>
      <tr><th>9</th><td>-1.625116</td><td>-9.308155</td></tr>
      <tr><th>10</th><td>-2.167086</td><td>-49.31879</td></tr>
      <tr><th>11</th><td>-2.250736</td><td>-66.24227</td></tr>
      <tr><th>12</th><td>-0.173514</td><td>3.055715</td></tr>
      <tr><th>13</th><td>0.1128078</td><td>-13.65439</td></tr>
      <tr><th>14</th><td>1.276335</td><td>14.73564</td></tr>
      <tr><th>15</th><td>-1.21493</td><td>-38.304</td></tr>
      <tr><th>16</th><td>-0.717338</td><td>-40.98679</td></tr>
      <tr><th>17</th><td>-2.132556</td><td>-43.57289</td></tr>
      <tr><th>18</th><td>-0.136081</td><td>1.656592</td></tr>
      <tr><th>19</th><td>0.4362043</td><td>13.44593</td></tr>
      <tr><th>20</th><td>0.4283277</td><td>-0.5028248</td></tr>
      <tr><th>21</th><td>2.264666</td><td>-1.318424</td></tr>
      <tr><th>22</th><td>-0.03839479</td><td>-49.45262</td></tr>
      <tr><th>23</th><td>-0.1157121</td><td>2.091355</td></tr>
      <tr><th>24</th><td>-0.02997813</td><td>-7.302498</td></tr>
      <tr><th>25</th><td>-0.005127433</td><td>-12.17123</td></tr>
      <tr><th>26</th><td>-0.7380268</td><td>-9.394012</td></tr>
      <tr><th>27</th><td>0.1536367</td><td>-1.629815</td></tr>
      <tr><th>28</th><td>0.02009974</td><td>-0.1488457</td></tr>
      <tr><th>29</th><td>0.8816912</td><td>-3.421535</td></tr>
      <tr><th>30</th><td>0.181939</td><td>-19.66619</td></tr>
      <tr><th>31</th><td>-0.2689637</td><td>1.728556</td></tr>
      <tr><th>32</th><td>0.04365453</td><td>4.732682</td></tr>
    </table>
    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 127-128

The coefficients of the i-th output marginal.

.. GENERATED FROM PYTHON SOURCE LINES 128-131

.. code-block:: Python

    i = 1
    result.getCoefficients()[i]






.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    class=Point name=Unnamed dimension=2 values=[-0.766216,-8.21324]
    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 132-133

Get the indices of the selected polynomials.

.. GENERATED FROM PYTHON SOURCE LINES 133-136

.. code-block:: Python

    subsetK = result.getIndices()
    subsetK






.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    [0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32]
    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 137-139

Get the composition of the polynomials
of the truncated multivariate basis.

.. GENERATED FROM PYTHON SOURCE LINES 139-150

.. code-block:: Python

    for i in range(subsetK.getSize()):
        print(
            "Polynomial number ",
            i,
            " in truncated basis <-> polynomial number ",
            subsetK[i],
            " = ",
            ot.LinearEnumerateFunction(dimension)(subsetK[i]),
            " in complete basis",
        )





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    Polynomial number  0  in truncated basis <-> polynomial number  0  =  [0,0]  in complete basis
    Polynomial number  1  in truncated basis <-> polynomial number  1  =  [1,0]  in complete basis
    Polynomial number  2  in truncated basis <-> polynomial number  2  =  [0,1]  in complete basis
    Polynomial number  3  in truncated basis <-> polynomial number  3  =  [2,0]  in complete basis
    Polynomial number  4  in truncated basis <-> polynomial number  4  =  [1,1]  in complete basis
    Polynomial number  5  in truncated basis <-> polynomial number  5  =  [0,2]  in complete basis
    Polynomial number  6  in truncated basis <-> polynomial number  6  =  [3,0]  in complete basis
    Polynomial number  7  in truncated basis <-> polynomial number  7  =  [2,1]  in complete basis
    Polynomial number  8  in truncated basis <-> polynomial number  8  =  [1,2]  in complete basis
    Polynomial number  9  in truncated basis <-> polynomial number  9  =  [0,3]  in complete basis
    Polynomial number  10  in truncated basis <-> polynomial number  10  =  [4,0]  in complete basis
    Polynomial number  11  in truncated basis <-> polynomial number  11  =  [3,1]  in complete basis
    Polynomial number  12  in truncated basis <-> polynomial number  12  =  [2,2]  in complete basis
    Polynomial number  13  in truncated basis <-> polynomial number  13  =  [1,3]  in complete basis
    Polynomial number  14  in truncated basis <-> polynomial number  14  =  [0,4]  in complete basis
    Polynomial number  15  in truncated basis <-> polynomial number  15  =  [5,0]  in complete basis
    Polynomial number  16  in truncated basis <-> polynomial number  16  =  [4,1]  in complete basis
    Polynomial number  17  in truncated basis <-> polynomial number  17  =  [3,2]  in complete basis
    Polynomial number  18  in truncated basis <-> polynomial number  18  =  [2,3]  in complete basis
    Polynomial number  19  in truncated basis <-> polynomial number  19  =  [1,4]  in complete basis
    Polynomial number  20  in truncated basis <-> polynomial number  20  =  [0,5]  in complete basis
    Polynomial number  21  in truncated basis <-> polynomial number  21  =  [6,0]  in complete basis
    Polynomial number  22  in truncated basis <-> polynomial number  22  =  [5,1]  in complete basis
    Polynomial number  23  in truncated basis <-> polynomial number  23  =  [4,2]  in complete basis
    Polynomial number  24  in truncated basis <-> polynomial number  24  =  [3,3]  in complete basis
    Polynomial number  25  in truncated basis <-> polynomial number  25  =  [2,4]  in complete basis
    Polynomial number  26  in truncated basis <-> polynomial number  26  =  [1,5]  in complete basis
    Polynomial number  27  in truncated basis <-> polynomial number  27  =  [0,6]  in complete basis
    Polynomial number  28  in truncated basis <-> polynomial number  28  =  [7,0]  in complete basis
    Polynomial number  29  in truncated basis <-> polynomial number  29  =  [6,1]  in complete basis
    Polynomial number  30  in truncated basis <-> polynomial number  30  =  [5,2]  in complete basis
    Polynomial number  31  in truncated basis <-> polynomial number  31  =  [4,3]  in complete basis
    Polynomial number  32  in truncated basis <-> polynomial number  32  =  [3,4]  in complete basis




.. GENERATED FROM PYTHON SOURCE LINES 151-153

Get the basis
~~~~~~~~~~~~~

.. GENERATED FROM PYTHON SOURCE LINES 155-157

Get the multivariate basis
as a collection of :class:`~openturns.Function` objects.

.. GENERATED FROM PYTHON SOURCE LINES 157-159

.. code-block:: Python

    reduced = result.getReducedBasis()








.. GENERATED FROM PYTHON SOURCE LINES 160-161

Get the orthogonal basis.

.. GENERATED FROM PYTHON SOURCE LINES 161-163

.. code-block:: Python

    orthgBasis = result.getOrthogonalBasis()








.. GENERATED FROM PYTHON SOURCE LINES 164-166

Get the standard distribution :math:`\mu` of the standardized
random vector :math:`\vect{Z}`.

.. GENERATED FROM PYTHON SOURCE LINES 166-168

.. code-block:: Python

    orthgBasis.getMeasure()






.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    ComposedDistribution
    <ul>
      <li>name=ComposedDistribution</li>
      <li>dimension: 2</li>
      <li>description=[X0,X1]
      <li>copula: IndependentCopula(dimension = 2)</li>
    </ul>

    <table>
      <tr>
        <th>Index</th>
        <th>Variable</th>
        <th>Distribution</th>
      </tr>
      <tr>
        <td>0</td>
        <td>X0</td>
        <td>Normal(mu = 0, sigma = 1)</td>
      </tr>
      <tr>
        <td>1</td>
        <td>X1</td>
        <td>Normal(mu = 0, sigma = 1)</td>
      </tr>
    </table>

    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 169-171

Get the metamodel
~~~~~~~~~~~~~~~~~

.. GENERATED FROM PYTHON SOURCE LINES 173-176

Get the composed meta model :math:`\hat{h}` which is
the model of the standardized random vector :math:`\vect{Z}`
within the reduced polynomials basis.

.. GENERATED FROM PYTHON SOURCE LINES 176-178

.. code-block:: Python

    result.getComposedMetaModel()






.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    DualLinearCombinationEvaluation
    <ul>
      <li> Input dimension = 2  </li>
      <li> Input description = [x0,x1]  </li>
      <li> Output dimension = 2  </li>
      <li> Size = 33  </li>
    </ul>
    <table>
      <tr>
        <th>Coefficient</th>
        <th>Function</th>
      </tr>
      <tr>
        <td>[0.00304403,1.45374]</td>
        <td>1</td>
      </tr>
      <tr>
        <td>[-0.766216,-8.21324]</td>
        <td>x0</td>
      </tr>
      <tr>
        <td>[-0.230992,-5.14313]</td>
        <td>x1</td>
      </tr>
      <tr>
        <td>[-1.3828,12.4909]</td>
        <td>-0.707107 + 0.707107 <span>&#215;</span> x0<sup>2</sup></td>
      </tr>
      <tr>
        <td>[-1.06414,-3.43407]</td>
        <td>-0.707107 + 0.707107 <span>&#215;</span> x1<sup>2</sup></td>
      </tr>
      <tr>
        <td>[-2.15939,-25.7292]</td>
        <td>-1.22474 <span>&#215;</span> x0 + 0.408248 <span>&#215;</span> x0<sup>3</sup></td>
      </tr>
      <tr>
        <td>[-1.01644,-37.6896]</td>
        <td>-1.22474 <span>&#215;</span> x1 + 0.408248 <span>&#215;</span> x1<sup>3</sup></td>
      </tr>
      <tr>
        <td>[-0.325041,8.6813]</td>
        <td>x0 <span>&#215;</span> x1</td>
      </tr>
      <tr>
        <td>[-0.907403,22.5756]</td>
        <td>0.612372 - 1.22474 <span>&#215;</span> x0<sup>2</sup> + 0.204124 <span>&#215;</span> x0<sup>4</sup></td>
      </tr>
      <tr>
        <td>[-1.62512,-9.30815]</td>
        <td>0.612372 - 1.22474 <span>&#215;</span> x1<sup>2</sup> + 0.204124 <span>&#215;</span> x1<sup>4</sup></td>
      </tr>
      <tr>
        <td>[-2.16709,-49.3188]</td>
        <td>1.36931 <span>&#215;</span> x0 - 0.912871 <span>&#215;</span> x0<sup>3</sup> + 0.0912871 <span>&#215;</span> x0<sup>5</sup></td>
      </tr>
      <tr>
        <td>[-2.25074,-66.2423]</td>
        <td>1.36931 <span>&#215;</span> x1 - 0.912871 <span>&#215;</span> x1<sup>3</sup> + 0.0912871 <span>&#215;</span> x1<sup>5</sup></td>
      </tr>
      <tr>
        <td>[-0.173514,3.05571]</td>
        <td>(-0.707107 + 0.707107 <span>&#215;</span> x0<sup>2</sup>) <span>&#215;</span> x1</td>
      </tr>
      <tr>
        <td>[0.112808,-13.6544]</td>
        <td>x0 <span>&#215;</span> (-0.707107 + 0.707107 <span>&#215;</span> x1<sup>2</sup>)</td>
      </tr>
      <tr>
        <td>[1.27634,14.7356]</td>
        <td>-0.559017 + 1.67705 <span>&#215;</span> x0<sup>2</sup> - 0.559017 <span>&#215;</span> x0<sup>4</sup> + 0.0372678 <span>&#215;</span> x0<sup>6</sup></td>
      </tr>
      <tr>
        <td>[-1.21493,-38.304]</td>
        <td>-0.559017 + 1.67705 <span>&#215;</span> x1<sup>2</sup> - 0.559017 <span>&#215;</span> x1<sup>4</sup> + 0.0372678 <span>&#215;</span> x1<sup>6</sup></td>
      </tr>
      <tr>
        <td>[-0.717338,-40.9868]</td>
        <td>-1.47902 <span>&#215;</span> x0 + 1.47902 <span>&#215;</span> x0<sup>3</sup> - 0.295804 <span>&#215;</span> x0<sup>5</sup> + 0.0140859 <span>&#215;</span> x0<sup>7</sup></td>
      </tr>
      <tr>
        <td>[-2.13256,-43.5729]</td>
        <td>-1.47902 <span>&#215;</span> x1 + 1.47902 <span>&#215;</span> x1<sup>3</sup> - 0.295804 <span>&#215;</span> x1<sup>5</sup> + 0.0140859 <span>&#215;</span> x1<sup>7</sup></td>
      </tr>
      <tr>
        <td>[-0.136081,1.65659]</td>
        <td>(-1.22474 <span>&#215;</span> x0 + 0.408248 <span>&#215;</span> x0<sup>3</sup>) <span>&#215;</span> x1</td>
      </tr>
      <tr>
        <td>[0.436204,13.4459]</td>
        <td>x0 <span>&#215;</span> (-1.22474 <span>&#215;</span> x1 + 0.408248 <span>&#215;</span> x1<sup>3</sup>)</td>
      </tr>
      <tr>
        <td>[0.428328,-0.502825]</td>
        <td>(-0.707107 + 0.707107 <span>&#215;</span> x0<sup>2</sup>) <span>&#215;</span> (-0.707107 + 0.707107 <span>&#215;</span> x1<sup>2</sup>)</td>
      </tr>
      <tr>
        <td>[2.26467,-1.31842]</td>
        <td>0.522913 - 2.09165 <span>&#215;</span> x0<sup>2</sup> + 1.04583 <span>&#215;</span> x0<sup>4</sup> - 0.139443 <span>&#215;</span> x0<sup>6</sup> + 0.00498012 <span>&#215;</span> x0<sup>8</sup></td>
      </tr>
      <tr>
        <td>[-0.0383948,-49.4526]</td>
        <td>0.522913 - 2.09165 <span>&#215;</span> x1<sup>2</sup> + 1.04583 <span>&#215;</span> x1<sup>4</sup> - 0.139443 <span>&#215;</span> x1<sup>6</sup> + 0.00498012 <span>&#215;</span> x1<sup>8</sup></td>
      </tr>
      <tr>
        <td>[-0.115712,2.09135]</td>
        <td>(0.612372 - 1.22474 <span>&#215;</span> x0<sup>2</sup> + 0.204124 <span>&#215;</span> x0<sup>4</sup>) <span>&#215;</span> x1</td>
      </tr>
      <tr>
        <td>[-0.0299781,-7.3025]</td>
        <td>x0 <span>&#215;</span> (0.612372 - 1.22474 <span>&#215;</span> x1<sup>2</sup> + 0.204124 <span>&#215;</span> x1<sup>4</sup>)</td>
      </tr>
      <tr>
        <td>[-0.00512743,-12.1712]</td>
        <td>1.56874 <span>&#215;</span> x0 - 2.09165 <span>&#215;</span> x0<sup>3</sup> + 0.627495 <span>&#215;</span> x0<sup>5</sup> - 0.0597614 <span>&#215;</span> x0<sup>7</sup> + 0.00166004 <span>&#215;</span> x0<sup>9</sup></td>
      </tr>
      <tr>
        <td>[-0.738027,-9.39401]</td>
        <td>1.56874 <span>&#215;</span> x1 - 2.09165 <span>&#215;</span> x1<sup>3</sup> + 0.627495 <span>&#215;</span> x1<sup>5</sup> - 0.0597614 <span>&#215;</span> x1<sup>7</sup> + 0.00166004 <span>&#215;</span> x1<sup>9</sup></td>
      </tr>
      <tr>
        <td>[0.153637,-1.62981]</td>
        <td>(-1.22474 <span>&#215;</span> x0 + 0.408248 <span>&#215;</span> x0<sup>3</sup>) <span>&#215;</span> (-0.707107 + 0.707107 <span>&#215;</span> x1<sup>2</sup>)</td>
      </tr>
      <tr>
        <td>[0.0200997,-0.148846]</td>
        <td>(-0.707107 + 0.707107 <span>&#215;</span> x0<sup>2</sup>) <span>&#215;</span> (-1.22474 <span>&#215;</span> x1 + 0.408248 <span>&#215;</span> x1<sup>3</sup>)</td>
      </tr>
      <tr>
        <td>[0.881691,-3.42154]</td>
        <td>-0.496078 + 2.48039 <span>&#215;</span> x0<sup>2</sup> - 1.65359 <span>&#215;</span> x0<sup>4</sup> + 0.330719 <span>&#215;</span> x0<sup>6</sup> - 0.0236228 <span>&#215;</span> x0<sup>8</sup> + 0.000524951 <span>&#215;</span> x0<sup>10</sup></td>
      </tr>
      <tr>
        <td>[0.181939,-19.6662]</td>
        <td>-0.496078 + 2.48039 <span>&#215;</span> x1<sup>2</sup> - 1.65359 <span>&#215;</span> x1<sup>4</sup> + 0.330719 <span>&#215;</span> x1<sup>6</sup> - 0.0236228 <span>&#215;</span> x1<sup>8</sup> + 0.000524951 <span>&#215;</span> x1<sup>10</sup></td>
      </tr>
      <tr>
        <td>[-0.268964,1.72856]</td>
        <td>(1.36931 <span>&#215;</span> x0 - 0.912871 <span>&#215;</span> x0<sup>3</sup> + 0.0912871 <span>&#215;</span> x0<sup>5</sup>) <span>&#215;</span> x1</td>
      </tr>
      <tr>
        <td>[0.0436545,4.73268]</td>
        <td>x0 <span>&#215;</span> (1.36931 <span>&#215;</span> x1 - 0.912871 <span>&#215;</span> x1<sup>3</sup> + 0.0912871 <span>&#215;</span> x1<sup>5</sup>)</td>
      </tr>
    </table>

    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 179-181

Get the meta model :math:`\hat{g}` which is the composed meta model composed with the
iso probabilistic transformation :math:`T`.

.. GENERATED FROM PYTHON SOURCE LINES 181-183

.. code-block:: Python

    result.getMetaModel()






.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    DualLinearCombinationEvaluation
    <ul>
      <li> Input dimension = 2  </li>
      <li> Input description = [X0,X1]  </li>
      <li> Output dimension = 2  </li>
      <li> Size = 33  </li>
    </ul>
    <table>
      <tr>
        <th>Coefficient</th>
        <th>Function</th>
      </tr>
      <tr>
        <td>[0.00304403,1.45374]</td>
        <td>1</td>
      </tr>
      <tr>
        <td>[-0.766216,-8.21324]</td>
        <td>x0</td>
      </tr>
      <tr>
        <td>[-0.230992,-5.14313]</td>
        <td>x1</td>
      </tr>
      <tr>
        <td>[-1.3828,12.4909]</td>
        <td>-0.707107 + 0.707107 <span>&#215;</span> x0<sup>2</sup></td>
      </tr>
      <tr>
        <td>[-1.06414,-3.43407]</td>
        <td>-0.707107 + 0.707107 <span>&#215;</span> x1<sup>2</sup></td>
      </tr>
      <tr>
        <td>[-2.15939,-25.7292]</td>
        <td>-1.22474 <span>&#215;</span> x0 + 0.408248 <span>&#215;</span> x0<sup>3</sup></td>
      </tr>
      <tr>
        <td>[-1.01644,-37.6896]</td>
        <td>-1.22474 <span>&#215;</span> x1 + 0.408248 <span>&#215;</span> x1<sup>3</sup></td>
      </tr>
      <tr>
        <td>[-0.325041,8.6813]</td>
        <td>x0 <span>&#215;</span> x1</td>
      </tr>
      <tr>
        <td>[-0.907403,22.5756]</td>
        <td>0.612372 - 1.22474 <span>&#215;</span> x0<sup>2</sup> + 0.204124 <span>&#215;</span> x0<sup>4</sup></td>
      </tr>
      <tr>
        <td>[-1.62512,-9.30815]</td>
        <td>0.612372 - 1.22474 <span>&#215;</span> x1<sup>2</sup> + 0.204124 <span>&#215;</span> x1<sup>4</sup></td>
      </tr>
      <tr>
        <td>[-2.16709,-49.3188]</td>
        <td>1.36931 <span>&#215;</span> x0 - 0.912871 <span>&#215;</span> x0<sup>3</sup> + 0.0912871 <span>&#215;</span> x0<sup>5</sup></td>
      </tr>
      <tr>
        <td>[-2.25074,-66.2423]</td>
        <td>1.36931 <span>&#215;</span> x1 - 0.912871 <span>&#215;</span> x1<sup>3</sup> + 0.0912871 <span>&#215;</span> x1<sup>5</sup></td>
      </tr>
      <tr>
        <td>[-0.173514,3.05571]</td>
        <td>(-0.707107 + 0.707107 <span>&#215;</span> x0<sup>2</sup>) <span>&#215;</span> x1</td>
      </tr>
      <tr>
        <td>[0.112808,-13.6544]</td>
        <td>x0 <span>&#215;</span> (-0.707107 + 0.707107 <span>&#215;</span> x1<sup>2</sup>)</td>
      </tr>
      <tr>
        <td>[1.27634,14.7356]</td>
        <td>-0.559017 + 1.67705 <span>&#215;</span> x0<sup>2</sup> - 0.559017 <span>&#215;</span> x0<sup>4</sup> + 0.0372678 <span>&#215;</span> x0<sup>6</sup></td>
      </tr>
      <tr>
        <td>[-1.21493,-38.304]</td>
        <td>-0.559017 + 1.67705 <span>&#215;</span> x1<sup>2</sup> - 0.559017 <span>&#215;</span> x1<sup>4</sup> + 0.0372678 <span>&#215;</span> x1<sup>6</sup></td>
      </tr>
      <tr>
        <td>[-0.717338,-40.9868]</td>
        <td>-1.47902 <span>&#215;</span> x0 + 1.47902 <span>&#215;</span> x0<sup>3</sup> - 0.295804 <span>&#215;</span> x0<sup>5</sup> + 0.0140859 <span>&#215;</span> x0<sup>7</sup></td>
      </tr>
      <tr>
        <td>[-2.13256,-43.5729]</td>
        <td>-1.47902 <span>&#215;</span> x1 + 1.47902 <span>&#215;</span> x1<sup>3</sup> - 0.295804 <span>&#215;</span> x1<sup>5</sup> + 0.0140859 <span>&#215;</span> x1<sup>7</sup></td>
      </tr>
      <tr>
        <td>[-0.136081,1.65659]</td>
        <td>(-1.22474 <span>&#215;</span> x0 + 0.408248 <span>&#215;</span> x0<sup>3</sup>) <span>&#215;</span> x1</td>
      </tr>
      <tr>
        <td>[0.436204,13.4459]</td>
        <td>x0 <span>&#215;</span> (-1.22474 <span>&#215;</span> x1 + 0.408248 <span>&#215;</span> x1<sup>3</sup>)</td>
      </tr>
      <tr>
        <td>[0.428328,-0.502825]</td>
        <td>(-0.707107 + 0.707107 <span>&#215;</span> x0<sup>2</sup>) <span>&#215;</span> (-0.707107 + 0.707107 <span>&#215;</span> x1<sup>2</sup>)</td>
      </tr>
      <tr>
        <td>[2.26467,-1.31842]</td>
        <td>0.522913 - 2.09165 <span>&#215;</span> x0<sup>2</sup> + 1.04583 <span>&#215;</span> x0<sup>4</sup> - 0.139443 <span>&#215;</span> x0<sup>6</sup> + 0.00498012 <span>&#215;</span> x0<sup>8</sup></td>
      </tr>
      <tr>
        <td>[-0.0383948,-49.4526]</td>
        <td>0.522913 - 2.09165 <span>&#215;</span> x1<sup>2</sup> + 1.04583 <span>&#215;</span> x1<sup>4</sup> - 0.139443 <span>&#215;</span> x1<sup>6</sup> + 0.00498012 <span>&#215;</span> x1<sup>8</sup></td>
      </tr>
      <tr>
        <td>[-0.115712,2.09135]</td>
        <td>(0.612372 - 1.22474 <span>&#215;</span> x0<sup>2</sup> + 0.204124 <span>&#215;</span> x0<sup>4</sup>) <span>&#215;</span> x1</td>
      </tr>
      <tr>
        <td>[-0.0299781,-7.3025]</td>
        <td>x0 <span>&#215;</span> (0.612372 - 1.22474 <span>&#215;</span> x1<sup>2</sup> + 0.204124 <span>&#215;</span> x1<sup>4</sup>)</td>
      </tr>
      <tr>
        <td>[-0.00512743,-12.1712]</td>
        <td>1.56874 <span>&#215;</span> x0 - 2.09165 <span>&#215;</span> x0<sup>3</sup> + 0.627495 <span>&#215;</span> x0<sup>5</sup> - 0.0597614 <span>&#215;</span> x0<sup>7</sup> + 0.00166004 <span>&#215;</span> x0<sup>9</sup></td>
      </tr>
      <tr>
        <td>[-0.738027,-9.39401]</td>
        <td>1.56874 <span>&#215;</span> x1 - 2.09165 <span>&#215;</span> x1<sup>3</sup> + 0.627495 <span>&#215;</span> x1<sup>5</sup> - 0.0597614 <span>&#215;</span> x1<sup>7</sup> + 0.00166004 <span>&#215;</span> x1<sup>9</sup></td>
      </tr>
      <tr>
        <td>[0.153637,-1.62981]</td>
        <td>(-1.22474 <span>&#215;</span> x0 + 0.408248 <span>&#215;</span> x0<sup>3</sup>) <span>&#215;</span> (-0.707107 + 0.707107 <span>&#215;</span> x1<sup>2</sup>)</td>
      </tr>
      <tr>
        <td>[0.0200997,-0.148846]</td>
        <td>(-0.707107 + 0.707107 <span>&#215;</span> x0<sup>2</sup>) <span>&#215;</span> (-1.22474 <span>&#215;</span> x1 + 0.408248 <span>&#215;</span> x1<sup>3</sup>)</td>
      </tr>
      <tr>
        <td>[0.881691,-3.42154]</td>
        <td>-0.496078 + 2.48039 <span>&#215;</span> x0<sup>2</sup> - 1.65359 <span>&#215;</span> x0<sup>4</sup> + 0.330719 <span>&#215;</span> x0<sup>6</sup> - 0.0236228 <span>&#215;</span> x0<sup>8</sup> + 0.000524951 <span>&#215;</span> x0<sup>10</sup></td>
      </tr>
      <tr>
        <td>[0.181939,-19.6662]</td>
        <td>-0.496078 + 2.48039 <span>&#215;</span> x1<sup>2</sup> - 1.65359 <span>&#215;</span> x1<sup>4</sup> + 0.330719 <span>&#215;</span> x1<sup>6</sup> - 0.0236228 <span>&#215;</span> x1<sup>8</sup> + 0.000524951 <span>&#215;</span> x1<sup>10</sup></td>
      </tr>
      <tr>
        <td>[-0.268964,1.72856]</td>
        <td>(1.36931 <span>&#215;</span> x0 - 0.912871 <span>&#215;</span> x0<sup>3</sup> + 0.0912871 <span>&#215;</span> x0<sup>5</sup>) <span>&#215;</span> x1</td>
      </tr>
      <tr>
        <td>[0.0436545,4.73268]</td>
        <td>x0 <span>&#215;</span> (1.36931 <span>&#215;</span> x1 - 0.912871 <span>&#215;</span> x1<sup>3</sup> + 0.0912871 <span>&#215;</span> x1<sup>5</sup>)</td>
      </tr>
    </table>

    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 184-186

Get the projection method
~~~~~~~~~~~~~~~~~~~~~~~~~

.. GENERATED FROM PYTHON SOURCE LINES 188-190

Get the projection strategy: this is the method to estimate
the coefficients, i.e. regression or integration.

.. GENERATED FROM PYTHON SOURCE LINES 190-191

.. code-block:: Python

    algo.getProjectionStrategy()





.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    ProjectionStrategyImplementation
    <ul>
      <li>coefficients: dimension=33</li>
      <li>residual: 9.53483e-15</li>
      <li>relative error: 3.00023e-28</li>
      <li>measure: Distribution</li>
      <li>weighted experiment: WeightedExperiment</li>
      <li>input sample: size= 30 x dimension= 2</li>
      <li>output sample: size= 30 x dimension= 2</li>
      <li>weights: dimension= 30</li>
      <li>design: size= 30</li>
    <ul>

    </div>
    <br />
    <br />


.. _sphx_glr_download_auto_meta_modeling_polynomial_chaos_metamodel_plot_functional_chaos_exploitation.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: plot_functional_chaos_exploitation.ipynb <plot_functional_chaos_exploitation.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: plot_functional_chaos_exploitation.py <plot_functional_chaos_exploitation.py>`
